--- a/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.scss
+++ b/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.scss
@@ -61,6 +61,7 @@
 .section-group {
   display: flex;
   flex-direction: column;
+  padding-inline: var(--space-md);
 }
 
 // ===== INTERACTIVE STEP =====
