--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -10,7 +10,7 @@
     </button>
 
     <button matIconButton (click)="resetRemote()" [attr.aria-label]="'titlebar.home' | translate">
-      <mat-icon svgIcon="rclone-symbolic" aria-hidden="true"></mat-icon>
+      <mat-icon svgIcon="rclone" aria-hidden="true"></mat-icon>
     </button>
 
     <!-- Connection Status Indicator -->
