--- a/src/app/shared/overviews-shared/remote-card/remote-card.component.html
+++ b/src/app/shared/overviews-shared/remote-card/remote-card.component.html
@@ -26,7 +26,7 @@
           <mat-icon
             svgIcon="mount"
             class="status-icon"
-            [attr.aria-label]="'shared.remoteCard.status.mounted' | translate"
+            [attr.aria-label]="'detailShared.status.mounted' | translate"
           ></mat-icon>
         </div>
       }
@@ -39,7 +39,7 @@
           <mat-icon
             svgIcon="refresh"
             class="status-icon"
-            [attr.aria-label]="'shared.remoteCard.status.syncing' | translate"
+            [attr.aria-label]="'detailShared.status.syncing' | translate"
           ></mat-icon>
         </div>
       }
@@ -52,7 +52,7 @@
           <mat-icon
             svgIcon="copy"
             class="status-icon"
-            [attr.aria-label]="'shared.remoteCard.status.copying' | translate"
+            [attr.aria-label]="'detailShared.status.copying' | translate"
           ></mat-icon>
         </div>
       }
@@ -65,7 +65,7 @@
           <mat-icon
             svgIcon="move"
             class="status-icon"
-            [attr.aria-label]="'shared.remoteCard.status.moving' | translate"
+            [attr.aria-label]="'detailShared.status.moving' | translate"
           ></mat-icon>
         </div>
       }
@@ -78,7 +78,7 @@
           <mat-icon
             svgIcon="right-left"
             class="status-icon"
-            [attr.aria-label]="'shared.remoteCard.status.bisyncing' | translate"
+            [attr.aria-label]="'detailShared.status.bisyncing' | translate"
           ></mat-icon>
         </div>
       }
