--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -327,55 +327,66 @@
               <h4>{{ 'modals.about.rcloneInfo' | translate }}</h4>
             </div>
 
-            @if (loadingRclone) {
+            @if (loadingRclone()) {
               <div class="loading">
                 <mat-spinner diameter="24"></mat-spinner>
                 <span>{{ 'modals.about.loadingRclone' | translate }}</span>
               </div>
             }
 
-            @if (rcloneError) {
+            @if (rcloneError()) {
               <div class="error">
                 <mat-icon svgIcon="circle-exclamation"></mat-icon>
-                <span>{{ rcloneError }}</span>
+                <span>{{ rcloneError() }}</span>
               </div>
             }
 
-            @if (rcloneInfo && !loadingRclone) {
+            @if (rcloneInfo() && !loadingRclone()) {
               <div class="rclone-details">
                 <div class="detail-row">
                   <span class="detail-label">{{ 'modals.about.version' | translate }}:</span>
-                  <span class="detail-value">{{ rcloneInfo.version }}</span>
+                  <span class="detail-value">{{ rcloneInfo()?.version }}</span>
                 </div>
                 <div class="detail-row">
                   <span class="detail-label">{{ 'modals.about.os' | translate }}:</span>
-                  <span class="detail-value">{{ rcloneInfo.os }} ({{ rcloneInfo.arch }})</span>
+                  <span class="detail-value"
+                    >{{ rcloneInfo()?.os }} ({{ rcloneInfo()?.arch }})</span
+                  >
                 </div>
-                @if (rcloneInfo.pid) {
+                @if (rcloneInfo()?.pid) {
                   <div class="detail-row">
                     <span class="detail-label">{{ 'modals.about.pid' | translate }}:</span>
-                    <span class="detail-value">{{ rcloneInfo.pid }}</span>
+                    <span class="detail-value">{{ rcloneInfo()?.pid }}</span>
                     <button
                       matIconButton
-                      [matTooltip]="'modals.about.killProcess' | translate"
+                      [matTooltip]="
+                        backendService.activeBackend() === 'Local'
+                          ? ('modals.about.killProcess' | translate)
+                          : ('modals.about.quitRclone' | translate)
+                      "
                       matTooltipPosition="right"
-                      (click)="killProcess()"
+                      (click)="quitRcloneEngine()"
                       class="kill-button"
                     >
-                      <mat-icon svgIcon="skull" class="orange"></mat-icon>
+                      <mat-icon
+                        [svgIcon]="
+                          backendService.activeBackend() === 'Local' ? 'skull' : 'power-off'
+                        "
+                        class="orange"
+                      ></mat-icon>
                     </button>
                   </div>
                 }
                 <div class="detail-row">
                   <span class="detail-label">{{ 'modals.about.goVersion' | translate }}:</span>
-                  <span class="detail-value">{{ rcloneInfo.goVersion }}</span>
+                  <span class="detail-value">{{ rcloneInfo()?.goVersion }}</span>
                 </div>
 
-                @if (rcloneInfo.isBeta || rcloneInfo.isGit) {
+                @if (rcloneInfo()?.isBeta || rcloneInfo()?.isGit) {
                   <div class="detail-row warning">
                     <mat-icon svgIcon="warning"></mat-icon>
                     <span>{{
-                      rcloneInfo.isBeta
+                      rcloneInfo()?.isBeta
                         ? ('modals.about.betaVersion' | translate)
                         : ('modals.about.devBuild' | translate)
                     }}</span>
