--- a/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.html
+++ b/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.html
@@ -153,7 +153,7 @@
           @if (analysis.contents!.rcloneConfig) {
             <div class="content-item">
               <div class="item-icon-wrapper">
-                <mat-icon svgIcon="rclone-symbolic" class="item-icon"></mat-icon>
+                <mat-icon svgIcon="rclone" class="item-icon"></mat-icon>
               </div>
               <div class="item-content">
                 <span class="item-title">{{
