Refactor: Update Tauri commands to use `AppHandle` for accessing application state and `BackendManager` instead of direct state injection or global singletons.

--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
@@ -431,6 +431,12 @@
                           >
                             <mat-icon svgIcon="close"></mat-icon>
                           </button>
+                          @if (
+                            getArrayItemControl(category, key, $index).invalid &&
+                            getArrayItemControl(category, key, $index).touched
+                          ) {
+                            <mat-error>{{ getValidationMessage(category, key, $index) }}</mat-error>
+                          }
                         </mat-form-field>
                       </div>
                     }
